refactor: Extract util method