@@ -4,23 +4,36 @@ import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
 import static com.github.tomakehurst.wiremock.client.WireMock.equalTo;
 import static com.github.tomakehurst.wiremock.client.WireMock.get;
 import static com.github.tomakehurst.wiremock.client.WireMock.stubFor;
+
 import static no.sikt.nva.pubchannels.HttpHeaders.ACCEPT;
-import static no.sikt.nva.pubchannels.TestCommons.CUSTOM_DOMAIN_BASE_PATH;
 import static no.sikt.nva.pubchannels.TestCommons.API_DOMAIN;
+import static no.sikt.nva.pubchannels.TestCommons.CUSTOM_DOMAIN_BASE_PATH;
 import static no.unit.nva.commons.json.JsonUtils.dtoObjectMapper;
 import static no.unit.nva.testutils.RandomDataGenerator.objectMapper;
 import static no.unit.nva.testutils.RandomDataGenerator.randomInteger;
+
 import static nva.commons.core.attempt.Try.attempt;
 import static nva.commons.core.paths.UriWrapper.HTTPS;
+
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
+
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.ObjectNode;
 import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.matching.StringValuePattern;
 import com.google.common.net.MediaType;
+
+import no.sikt.nva.pubchannels.channelregistry.ChannelRegistryClient;
+import no.sikt.nva.pubchannels.channelregistry.mapper.ScientificValueMapper;
+import no.sikt.nva.pubchannels.channelregistry.model.search.ChannelRegistryEntityPageInformation;
+import no.unit.nva.testutils.HandlerRequestBuilder;
+
+import nva.commons.core.SingletonCollector;
+import nva.commons.core.paths.UriWrapper;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
@@ -35,12 +48,6 @@ import java.util.Objects;
 import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
-import no.sikt.nva.pubchannels.channelregistry.ChannelRegistryClient;
-import no.sikt.nva.pubchannels.channelregistry.mapper.ScientificValueMapper;
-import no.sikt.nva.pubchannels.channelregistry.model.search.ChannelRegistryEntityPageInformation;
-import no.unit.nva.testutils.HandlerRequestBuilder;
-import nva.commons.core.SingletonCollector;
-import nva.commons.core.paths.UriWrapper;
 
 public class TestUtils {
 
@@ -97,6 +104,15 @@ public class TestUtils {
                    .build();
     }
 
+    public static InputStream constructRequest(
+            Map<String, String> queryParameters, MediaType mediaType)
+            throws JsonProcessingException {
+        return new HandlerRequestBuilder<Void>(dtoObjectMapper)
+                .withHeaders(Map.of(ACCEPT, mediaType.toString()))
+                .withQueryParameters(queryParameters)
+                .build();
+    }
+
     public static String scientificValueToLevel(ScientificValue scientificValue) {
         return ScientificValueMapper.VALUES.entrySet()
                    .stream()
@@ -111,14 +127,14 @@ public class TestUtils {
 
     public static List<String> getChannelRegistrySearchResult(int year, String name, int maxNr) {
         return IntStream.range(0, maxNr)
-                   .mapToObj(i -> generateChannelRegistryJournalBody(year, name))
-                   .collect(Collectors.toList());
+                .mapToObj(i -> generateChannelRegistryJournalBody(year, name))
+                .toList();
     }
 
     public static List<String> getChannelRegistrySearchPublisherResult(Integer year, String name, int maxNr) {
         return IntStream.range(0, maxNr)
-                   .mapToObj(i -> generateChannelRegistryPublisherBody(year, name))
-                   .collect(Collectors.toList());
+                .mapToObj(i -> generateChannelRegistryPublisherBody(year, name))
+                .toList();
     }
 
     public static Map<String, StringValuePattern> getStringStringValuePatternHashMap(String... queryValue) {
@@ -169,11 +185,11 @@ public class TestUtils {
 
     public static String getChannelRegistrySearchResponseBody(List<String> results, int offset, int size) {
         var resultsWithOffsetAndSize =
-            results.stream()
-                .skip(offset)
-                .limit(size)
-                .map(result -> attempt(() -> objectMapper.readTree(result)).orElseThrow())
-                .collect(Collectors.toList());
+                results.stream()
+                        .skip(offset)
+                        .limit(size)
+                        .map(result -> attempt(() -> objectMapper.readTree(result)).orElseThrow())
+                        .toList();
         var entityResult = createEntityResultObjectNode(resultsWithOffsetAndSize);
         return buildChannelRegistrySearchResponse(results, entityResult);
     }
